show better clustering under the GNN for the node classification task

--- a/GCN-GAT-nodeLevelClassification.ipynb
+++ b/GCN-GAT-nodeLevelClassification.ipynb
@@ -1115,7 +1115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we would have hoped for, the GNN model outperforms the MLP by quite a margin. This shows that using the graph information indeed improves our predictions and lets us generalize better.\n",
+    "As we would have hoped for, the GNN model outperforms the MLP by quite a margin. This shows that using the graph information indeed improves our predictions and lets us generalize better. Since the transformed node feature vectors under the graph neural network are more predictive of the class label than the transformed node feature vectors under the MLP, one might expect the transformed feature vectors to cluster more in the former case than in the latter. That turns out to be the case, as visualized quitely nicely here: https://colab.research.google.com/drive/14OvFnAXggxB8vM4e8vSURUp1TaKnovzX?usp=sharing\n",
     "\n",
     "The hyperparameters in the model have been chosen to create a relatively small network. This is because the first layer with an input dimension of 1433 can be relatively expensive to perform for large graphs. In general, GNNs can become relatively expensive for very big graphs. This is why such GNNs either have a small hidden size or use a special batching strategy where we sample a connected subgraph of the big, original graph. "
    ]
